--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>io.zeebe.spring</groupId>
+			<groupId>io.camunda</groupId>
 			<artifactId>spring-zeebe-starter</artifactId>
-			<version>0.26.0</version>
+			<version>8.0.6</version>
 		</dependency>
 
 		<dependency>
